--- a/JopPortalMVC/Views/Home/ViewArticle.cshtml
+++ b/JopPortalMVC/Views/Home/ViewArticle.cshtml
@@ -2,8 +2,8 @@
 
 @foreach (var item in Model)
 {
-    <h1>@item.Title</h1>
-    <h2>@item.Category</h2>
+    <h1>Title    : @item.Title</h1>
+    <h2>Category : @item.Category</h2>
     @Html.Raw(item.Content)
 
 }
