--- a/JopPortalMVC/Views/Shared/_Layout.cshtml
+++ b/JopPortalMVC/Views/Shared/_Layout.cshtml
@@ -6,28 +6,38 @@
     <title>@ViewData["Title"] - JopPortalMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/co"/>
+    <link rel="stylesheet" href="~/co" />
 </head>
-<body >
+@*id="particles-js" style="background-color: #009d9d"*@
+<body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
-            <div class="container"  id="particles-js" style="background-color: #009d9d">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+            <div class="container">
 
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Login"><img src="~/Screenshot 2022-06-14 210456.png" width="200" height="100" style="z-index:+1"/></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Login"><img src="~/Screenshot 2022-06-14 210456.png" width="200" height="100" style="z-index:+1" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>       
-                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">All Profiles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SortedView">Sorted Profiles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListArticle">View Articles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ArticlePost">Add Article</a>
+                        </li>
+                        <li class="nav-item">                            
+                            @Html.ActionLink("Sign Out", "LogOff", new { @class = "nav-link text-dark btn-danger" },new{ @onclick = "return confirm('Do You Want to Log Out?');" })
                         </li>
                     </ul>
-                </div>*@
+                </div>
             </div>
         </nav>
     </header>
